# mvs-texturing

./: .gitignore  CMakeLists.txt
apps/texrecon/: CMakeLists.txt  texrecon.cpp
elibs/: CMakeLists.txt
elibs/mve/mve/: CMakeLists.txt
libs/: CMakeLists.txt
libs/mapmap/: CMakeLists.txt
libs/mve/libs/mve/: Makefile.dep
libs/tex/: CMakeLists.txt  calculate_data_costs.cpp  texture_view.cpp
tex/: CMakeLists.txt  calculate_data_costs.cpp
