# MVS TEXTURING FILES
set(LIBRARY mvstex)

file (GLOB HEADERS "*.h")
file (GLOB SOURCES "*.cpp")

if(${MVS_TEXTURING_BUILD_STATIC})
    set(MVS_TEX_LINKING_MODE STATIC)
else()
    set(MVS_TEX_LINKING_MODE SHARED)
endif(${MVS_TEXTURING_BUILD_STATIC})

add_library(${LIBRARY} ${MVS_TEX_LINKING_MODE} ${SOURCES})
set_property(TARGET ${LIBRARY} PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
target_link_libraries(${LIBRARY} ${TBB_LIBRARIES} -lmve -lmve_util ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${TIFF_LIBRARIES})
